--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,22 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather PWA</title>
+  <title>JdeBWeather</title>
   <meta name="codelab" content="your-first-pwa-v3">
   <link rel="stylesheet" type="text/css" href="/styles/inline.css">
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
 
-  <!-- CODELAB: Add link rel manifest -->
+ <!-- CODELAB: Add link rel manifest -->
+<link rel="manifest" href="/manifest.json">
   <!-- CODELAB: Add iOS meta tags and icons -->
-  <!-- CODELAB: Add description here -->
-  <!-- CODELAB: Add meta theme-color -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Weather PWA">
+<link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+<!-- CODELAB: Add description here -->
+<meta name="description" content="A sample weather app">
+<!-- CODELAB: Add meta theme-color -->
+<meta name="theme-color" content="#2F3BA2" />
 
 </head>
 <body>
@@ -181,6 +188,7 @@
             Values are lat/lon values, use Google Maps to find and add
             additional cities.
           -->
+          <option value="41.8781,-87.6298">Chicago, USA</option>
           <option value="28.6472799,76.8130727">Dehli, India</option>
           <option value="-5.7759362,106.1174957">Jakarta, Indonesia</option>
           <option value="51.5287718,-0.2416815">London, UK</option>
@@ -201,9 +209,21 @@
 
   <script src="/scripts/luxon-1.11.4.js"></script>
   <script src="/scripts/app.js"></script>
-  <!-- CODELAB: Add the install script here -->
+  
+ <!-- CODELAB: Add the install script here -->
+<script src="/scripts/install.js"></script>
+ 
+  
   <script>
-    // CODELAB: Register service worker.
+  // CODELAB: Register service worker.
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+        .then((reg) => {
+          console.log('Service worker registered.', reg);
+        });
+  });
+}
   </script>
 
 </body>
