--- a/public/offline.html
+++ b/public/offline.html
@@ -22,7 +22,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather PWA</title>
+  <title>JdeBWeather</title>
   <meta name="codelab" content="your-first-pwa-v3">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#2F3BA2" />
